# AIPI_561_Individual_Project_1

./: Cargo.toml  Dockerfile  Dockerfile.txt  README.md
.github/workflows/: docker-image.yml
Rust-Bert/: Cargo.toml  Dockerfile
Rust-Bert/src/: lib.rs
Rust-NLTK/: Cargo.toml  Dockerfile
Rust-NLTK/src/: lib.rs  main.rs
onnx_pytorch/: Cargo.toml  Makefile
onnx_pytorch/src/: lib.rs  main.rs
src/: main.rs
