[package]
name = "onnx_pytorch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnxruntime = "0.0.14"
clap={version="4.3.0", features=["derive"]}
tracing = "0.1.27"
tracing-subscriber = "0.3.17"
rust-bert = "0.20.0"
anyhow = "1.0.40"
